[project]
name = "route-optimizer-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.10.0",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.192.0",
    "google-auth-oauthlib>=1.3.0",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.5",
    "langchain-openai>=1.1.11",
]
